--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "Series of Node JS samples",
   "main": "hello-world.js",
   "dependencies": {
+    "@firebase/app": "^0.4.13",
+    "@firebase/app-types": "^0.4.3",
     "chalk": "^2.4.2",
     "cowsay": "^1.4.0",
+    "ejs": "^2.6.2",
+    "firebase-admin": "^8.3.0",
+    "firebase-functions": "^3.2.0",
+    "lru-cache": "^5.1.1",
     "minimist": "^1.2.0",
     "node-fetch": "^2.6.0",
     "progress": "^2.0.3"
   },
   "devDependencies": {
+    "axios": "^0.19.0",
     "eslint": "^6.1.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-plugin-import": "^2.18.2",
